--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons" />
     <!-- Polyfill for older browsers -->
 	<!-- <script src="https://code.angularjs.org/tools/system.js"></script> -->
+    <link rel="stylesheet" type="text/css" href="./assets/css/custom.css" />
 
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
