--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="./assets/css/material-dashboard.css" rel="stylesheet" />
     <!--  CSS for Demo Purpose, don't include it in your project     -->
     <link href="./assets/css/demo.css" rel="stylesheet" />
+    <link href="./assets/js/plugins/Semantic-UI-1.0/dist/semantic.min.css" />
     <!--     Fonts and icons     -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons" />
@@ -28,6 +29,8 @@
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/jquery/dist/jquery.js" type="text/javascript"></script>
+
+
     <!-- 2. Configure SystemJS -->
     <script src="./systemjs.config.js"></script>
     <script>
@@ -88,5 +91,6 @@
 <script src="./assets/js/material-dashboard-angular.js"></script>
 <!-- Material Dashboard DEMO methods, don't include it in your project! -->
 <script src="./assets/js/demo.js"></script>
+<script src="./assets/js/plugins/Semantic-UI-1.0/dist/semantic.min.js" />
 
 </html>
