--- a/index.html
+++ b/index.html
@@ -57,39 +57,39 @@
 <script src="./assets/js/core/arrive.js" type="text/javascript"></script>
 <script src="./assets/js/core/material.min.js" type="text/javascript"></script>
 <script src="./assets/js/core/perfect-scrollbar.jquery.min.js" type="text/javascript"></script>
-<!-- Forms Validations Plugin -->
-<script src="./assets/js/core/jquery.validate.min.js"></script>
+<!-- Forms Validations Plugin
+<script src="./assets/js/core/jquery.validate.min.js"></script> -->
 <!--  Plugin for Date Time Picker and Full Calendar Plugin-->
 <script src="./assets/js/plugins/moment.min.js"></script>
-<!--  Charts Plugin -->
-<script src="./assets/js/plugins/chartist.min.js"></script>
-<!--  Plugin for the Wizard -->
-<script src="./assets/js/plugins/jquery.bootstrap-wizard.js"></script>
+<!--  Charts Plugin
+<script src="./assets/js/plugins/chartist.min.js"></script> -->
+<!--  Plugin for the Wizard
+<script src="./assets/js/plugins/jquery.bootstrap-wizard.js"></script> -->
 <!--  Notifications Plugin    -->
 <script src="./assets/js/plugins/bootstrap-notify.js"></script>
-<!-- DateTimePicker Plugin -->
-<script src="./assets/js/plugins/bootstrap-datetimepicker.js"></script>
-<!-- Vector Map plugin -->
-<script src="./assets/js/plugins/jquery-jvectormap.js"></script>
-<!-- Sliders Plugin -->
-<script src="./assets/js/plugins/nouislider.min.js"></script>
-<!--  Google Maps Plugin    -->
-<script src="https://maps.googleapis.com/maps/api/js"></script>
+<!-- DateTimePicker Plugin
+<script src="./assets/js/plugins/bootstrap-datetimepicker.js"></script> -->
+<!-- Vector Map plugin
+<script src="./assets/js/plugins/jquery-jvectormap.js"></script> -->
+<!-- Sliders Plugin
+<script src="./assets/js/plugins/nouislider.min.js"></script> -->
+<!--  Google Maps Plugin
+<script src="https://maps.googleapis.com/maps/api/js"></script> -->
 <!-- Select Plugin -->
 <script src="./assets/js/plugins/jquery.select-bootstrap.js"></script>
 <!--  DataTables.net Plugin    -->
 <script src="./assets/js/plugins/jquery.datatables.js"></script>
-<!-- Sweet Alert 2 plugin -->
-<script src="./assets/js/plugins/sweetalert2.min.js"></script>
-<!--	Plugin for Fileupload  -->
-<script src="./assets/js/plugins/jasny-bootstrap.min.js"></script>
-<!--  Full Calendar Plugin    -->
-<script src="./assets/js/plugins/fullcalendar.min.js"></script>
+<!-- Sweet Alert 2 plugin
+<script src="./assets/js/plugins/sweetalert2.min.js"></script> -->
+<!--	Plugin for Fileupload
+<script src="./assets/js/plugins/jasny-bootstrap.min.js"></script>  -->
+<!--  Full Calendar Plugin
+<script src="./assets/js/plugins/fullcalendar.min.js"></script>   -->
 <!-- TagsInput Plugin -->
 <script src="./assets/js/plugins/jquery.tagsinput.js"></script>
 <!-- Material Dashboard javascript methods -->
 <script src="./assets/js/material-dashboard-angular.js"></script>
-<!-- Material Dashboard DEMO methods, don't include it in your project! -->
+<!-- Material Dashboard DEMO methods, don't include it in your project!
 <script src="./assets/js/demo.js"></script>
-<script src="./assets/js/plugins/Semantic-UI-1.0/dist/semantic.min.js" />
+<script src="./assets/js/plugins/Semantic-UI-1.0/dist/semantic.min.js" /> -->
 </html>
