added calendar component

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 <script src="./assets/js/plugins/sweetalert2.min.js"></script> -->
 <!--	Plugin for Fileupload
 <script src="./assets/js/plugins/jasny-bootstrap.min.js"></script>  -->
-<!--  Full Calendar Plugin
-<script src="./assets/js/plugins/fullcalendar.min.js"></script>   -->
+<!--  Full Calendar Plugin   -->
+<script src="./assets/js/plugins/fullcalendar.min.js"></script>
 <!-- TagsInput Plugin -->
 <script src="./assets/js/plugins/jquery.tagsinput.js"></script>
 <!-- Material Dashboard javascript methods -->
