--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 <script src="./assets/js/plugins/jquery.select-bootstrap.js"></script>
 <!--  DataTables.net Plugin    -->
 <script src="./assets/js/plugins/jquery.datatables.js"></script>
-<!-- Sweet Alert 2 plugin
-<script src="./assets/js/plugins/sweetalert2.min.js"></script> -->
+<!-- Sweet Alert 2 plugin -->
+<script src="./assets/js/plugins/sweetalert2.min.js"></script>
 <!--	Plugin for Fileupload
 <script src="./assets/js/plugins/jasny-bootstrap.min.js"></script>  -->
 <!--  Full Calendar Plugin   -->
