added setrates component

--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
 <script src="./assets/js/plugins/jquery.datatables.js"></script>
 <!-- Sweet Alert 2 plugin -->
 <script src="./assets/js/plugins/sweetalert2.min.js"></script>
-<!--	Plugin for Fileupload  -->
-<script src="./assets/js/plugins/jasny-bootstrap.min.js"></script>
-<!--  Full Calendar Plugin   -->
-<script src="./assets/js/plugins/fullcalendar.min.js"></script>
+<!--	Plugin for Fileupload
+<script src="./assets/js/plugins/jasny-bootstrap.min.js"></script> -->
+<!--  Full Calendar Plugin
+<script src="./assets/js/plugins/fullcalendar.min.js"></script>   -->
 <!-- TagsInput Plugin -->
 <script src="./assets/js/plugins/jquery.tagsinput.js"></script>
 <!-- Material Dashboard javascript methods -->
 <script src="./assets/js/material-dashboard-angular.js"></script>
-<!-- Material Dashboard DEMO methods, don't include it in your project! -->
+<!-- Material Dashboard DEMO methods, don't include it in your project!
 <script src="./assets/js/demo.js"></script>
-<script src="./assets/js/plugins/Semantic-UI-1.0/dist/semantic.min.js" />
+<script src="./assets/js/plugins/Semantic-UI-1.0/dist/semantic.min.js" /> -->
 </html>
