render table rates

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 <script src="./assets/js/plugins/jquery.bootstrap-wizard.js"></script> -->
 <!--  Notifications Plugin    -->
 <script src="./assets/js/plugins/bootstrap-notify.js"></script>
-<!-- DateTimePicker Plugin
-<script src="./assets/js/plugins/bootstrap-datetimepicker.js"></script> -->
+<!-- DateTimePicker Plugin -->
+<script src="./assets/js/plugins/bootstrap-datetimepicker.js"></script>
 <!-- Vector Map plugin
 <script src="./assets/js/plugins/jquery-jvectormap.js"></script> -->
 <!-- Sliders Plugin
