--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
 <script src="./assets/js/core/arrive.js" type="text/javascript"></script>
 <script src="./assets/js/core/material.min.js" type="text/javascript"></script>
 <script src="./assets/js/core/perfect-scrollbar.jquery.min.js" type="text/javascript"></script>
-<!-- Forms Validations Plugin
-<script src="./assets/js/core/jquery.validate.min.js"></script> -->
+<!-- Forms Validations Plugin -->
+<script src="./assets/js/core/jquery.validate.min.js"></script>
 <!--  Plugin for Date Time Picker and Full Calendar Plugin-->
 <script src="./assets/js/plugins/moment.min.js"></script>
 <!--  Charts Plugin
 <script src="./assets/js/plugins/chartist.min.js"></script> -->
-<!--  Plugin for the Wizard
-<script src="./assets/js/plugins/jquery.bootstrap-wizard.js"></script> -->
+<!--  Plugin for the Wizard -->
+<script src="./assets/js/plugins/jquery.bootstrap-wizard.js"></script>
 <!--  Notifications Plugin    -->
 <script src="./assets/js/plugins/bootstrap-notify.js"></script>
 <!-- DateTimePicker Plugin -->
@@ -91,5 +91,5 @@
 <script src="./assets/js/material-dashboard-angular.js"></script>
 <!-- Material Dashboard DEMO methods, don't include it in your project!
 <script src="./assets/js/demo.js"></script>
-<script src="./assets/js/plugins/Semantic-UI-1.0/dist/semantic.min.js" /> -->
+<script src="./assets/js/plugins/Semantic-UI-1.0/dist/semantic.min.js" />
 </html>
