--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 
 
     <!-- 2. Configure SystemJS -->
-    <script>document.write("<script type='text/javascript' src='./systemjs.config.js?v=" + Date.now() + "'><\/script>");</script>
-    <!--<script src="./systemjs.config.js?"></script>-->
+    <script src="./systemjs.config.js"></script>
     <script>
     	System.import('app').catch(function(err){ console.error(err); });
     </script>
